src/main/java/org/example/errors/GeneralParsingException.java
package org.example.errors;

public class GeneralParsingException  extends RuntimeException {
}
